--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  {% include 'navbar.html' %}
   <!-- Animated Background -->
   <div class="animated-background">
     <div class="circle circle-1"></div>
