--- a/templates/destination.html
+++ b/templates/destination.html
@@ -22,21 +22,7 @@
   <div class="animated-bg"></div>
 
   <!-- Navigation -->
-  <header>
-    <nav class="navbar" id="navbar">
-      <div class="logo">
-        <i class="icon-compass"></i>
-        TourGuidePro
-      </div>
-      <ul class="nav-links">
-        <li><a href="/">Home</a></li>
-        <li><a href="/cab/">Cab Booking</a></li>
-        <li><a href="/hotel/">Hotels</a></li>
-        <li><a href="/itinerary/">Itinerary</a></li>
-        <li><a href="/contact/">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  {% include 'navbar.html' %}
 
   <!-- Hero Section with Search -->
   <section class="hero-section">
