--- a/templates/hotel.html
+++ b/templates/hotel.html
@@ -9,23 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">
-        <i class="fas fa-plane-departure"></i> TourGuidePro
-      </div>
-      <ul class="nav-links">
-        <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="/cab/"><i class="fas fa-taxi"></i> Cab Booking</a></li>
-        <li><a href="/destination/"><i class="fas fa-map-marker-alt"></i> Destinations</a></li>
-        <li><a href="/itinerary/"><i class="fas fa-route"></i> Itinerary</a></li>
-        <li><a href="/contact/"><i class="fas fa-envelope"></i> Contact</a></li>
-      </ul>
-      <div class="mobile-menu">
-        <i class="fas fa-bars"></i>
-      </div>
-    </nav>
-  </header>
+  {% include 'navbar.html' %}
 
   <main class="hotel-section">
     <!-- Hero Section -->
