--- a/templates/signup.html
+++ b/templates/signup.html
@@ -21,6 +21,7 @@
     </style>
 </head>
 <body>
+    {% include 'navbar.html' %}
     <div class="auth-container">
         <div class="auth-form">
             <a href="/" class="back-link"><i class="fas fa-arrow-left"></i> Back to Home</a>
