--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static i18n %}
 <header>
     <nav class="navbar animated-header d-flex justify-content-between align-items-center px-3 py-2">
-        <div class="logo d-flex align-items-center gap-2">
+        <div class="logo-container d-flex align-items-center gap-2">
             <img src="{% static 'images/TourGuidePrologo.jpg' %}" alt="TourGuidePro Logo" class="logo-img" />
             <span class="logo-text">TourGuidePro</span>
         </div>
